data/derived/comb/progs/unify/prog0006.ml.out
Characters 17-20:
  let _ = sumList ["a";"b"];;
                   ^^^
Error: This expression has type string but an expression was expected of type
         int
